--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,4 +27,4 @@ jobs:
         run: npx surge --project ./build --domain dashing-scale.surge.sh
         env:
           SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
-          SURGE_TOKEN: $${{ secrets.SURGE_TOKEN }}
+          SURGE_TOKEN: '62e07ce3f06e194c8541a1b7a02b8f14'
