--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,13 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.x'
+      - name: Cache node_modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm   #${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-nodecachekey-${{ hashFiles('**/package-lock.json') }}
+          restore-key: |
+            ${{ runner.os }}-nodecachekey-
       - run: npm ci
       - run: npm run format:check
       - run: npm run test -- --coverage
