Added condition it is a push case for upload build in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,11 @@ jobs:
         if: github.event_name == 'push'
         run: npm run build
       - name: Upload Build Folder
-        uses: actions/upload-artifact@v1
+        if: github.event_name == 'push'
+        uses: actions/upload-artifact@v2
         with:
           name: build
           path: build
-
       - name: Deploy to Staging
         if: github.event_name == 'push'
         run: npx surge --project ./build --domain dashing-scale.surge.sh
