chore(commitizen-tool): deleted the husky hook for commitizen in the package.json file, was not used

--- a/package.json
+++ b/package.json
@@ -18,12 +18,8 @@
     "test:cc": "export CI=true || set CI=true& react-scripts test --coverage",
     "eject": "react-scripts eject",
     "format:check": "prettier --check \"**/*.{js,jsx,yml,yaml,json,css,scss,mdl}\"",
-    "format": "prettier --write \"**/*.{js,jsx,yml,yaml,json,css,scss,mdl}\""
-  },
-  "husky": {
-    "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
-    }
+    "format": "prettier --write \"**/*.{js,jsx,yml,yaml,json,css,scss,mdl}\"",
+    "commit": "cz"
   },
   "eslintConfig": {
     "extends": [
