--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,6 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker://technosophos/slack-notify
         env:
-          SLACK_WEBHOOK: $$ {{ secrets.SLACK_WEBHOOK }} # The WEBHOOK is already config to channel z_general
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }} # The WEBHOOK is already config to channel z_general
           SLACK_MESSAGE: 'Deployed to Production'
           #SLACK_CHANNEL: "z_general"
