--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,12 +64,32 @@ jobs:
           SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
 
       - name: Send a Slack Message
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      #  if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: docker://technosophos/slack-notify
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }} # The WEBHOOK is already config to channel z_general
           #SLACK_MESSAGE: 'Deployed to Production'
           #SLACK_MESSAGE: 'New Release ${{ github.event.release.tag_name }} is published, < ${{ github.event.release.html_url }}|check it out now.>'
-          SLACK_MESSAGE: '{"text":"New Release ${{ github.event.release.tag_name }} is published, < ${{ github.event.release.html_url }}|check it out now.>"}'
-
+          #SLACK_MESSAGE: New Release ${{ github.event.release.tag_name }} is published, < ${{ github.event.release.html_url }}|check it out now.>
+          SLACK_MESSAGE: ${{ github.event.release.tag_name }} is published
           #SLACK_CHANNEL: "z_general"
+
+      - name: Open an Issue
+        # if
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{
+          github.repository }}/issues \
+          --header 'authorization: Bearer ${{
+          secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+          "title": "Automated issue for commit: ${{
+          github.sha}}",
+          "body": "This issue was automatically created by
+          the GitHub Action workflow **${{ github.workflow
+          }}**. \n\n The commit hash was: _${{ github.sha}
+          }_.",
+          "assignees": ["${{
+          github.event.pull_request.user.login }}"]
+          }'
