--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,21 +74,36 @@ jobs:
           SLACK_MESSAGE: ${{ github.event.release.tag_name }} is published
           #SLACK_CHANNEL: "z_general"
 
-      - name: Open an Issue
-        # if
-        run: |
-          curl --request POST \
-          --url https://api.github.com/repos/${{
-          github.repository }}/issues \
-          --header 'authorization: Bearer ${{
-          secrets.GITHUB_TOKEN }}' \
-          --header 'content-type: application/json' \
-          --data '{
-          "title": "Automated issue for commit",
-          }'
-  #           "body": "This issue was automatically created by
-  #         "title": "Automated issue for commit: ${{ github.sha }}",
-  #        the GitHub Action workflow **${{ github.workflow
-  #        }}**. \n\n The commit hash was: _${{ github.sha }}_.",
-  #        "assignees": ["${{
-  #        github.event.pull_request.user.login }}"]
+      #    - name: Open an Issue
+      #      # if
+      #      run: |
+      #        curl --request POST \
+      #        --url https://api.github.com/repos/${{
+      #        github.repository }}/issues \
+      #        --header 'authorization: Bearer ${{
+      #        secrets.GITHUB_TOKEN }}' \
+      #        --header 'content-type: application/json' \
+      #        --data '{
+      #        "title": "Automated issue for commit",
+      #        }'
+      #           "body": "This issue was automatically created by
+      #         "title": "Automated issue for commit: ${{ github.sha }}",
+      #        the GitHub Action workflow **${{ github.workflow
+      #        }}**. \n\n The commit hash was: _${{ github.sha }}_.",
+      #        "assignees": ["${{
+      #        github.event.pull_request.user.login }}"]
+
+      - name: Create an issue
+        uses: actions-ecosystem/action-create-issue@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          title: ${{ steps.date.outputs.today }}
+          body: |
+            ## This week's TODO
+
+            - [ ] Have a meeting with UX team
+            - [ ] Check the dashboard
+
+          labels: |
+            meeting
+            weekly
