--- a/.github/workflows/staging-workflow.yml
+++ b/.github/workflows/staging-workflow.yml
@@ -38,6 +38,10 @@ jobs:
           name: code-coverage
           path: coverage
 
+      - name: Build Project
+        #if: github.event_name == 'push'
+        run: npm run build
+
       - name: Send a Slack Message
         if: github.event_name == 'push' && github.ref == 'refs/heads/develop'
         uses: docker://technosophos/slack-notify
