--- a/.github/workflows/staging-workflow.yml
+++ b/.github/workflows/staging-workflow.yml
@@ -81,6 +81,12 @@ jobs:
         env:
           CI: true
 
+      - name: Upload Test Coverage
+        uses: actions/upload-artifact@v1
+        with:
+          name: code-coverage
+          path: coverage
+
       - name: Build Project
         #if: github.event_name == 'push'
         run: npm run build
