--- a/.github/workflows/1-request-deploy-staging.yml
+++ b/.github/workflows/1-request-deploy-staging.yml
@@ -55,7 +55,7 @@ jobs:
         uses: actions-ecosystem/action-create-issue@v1
         with:
           github_token: ${{ secrets.github_token }}
-          title: ${{ steps.getdate.outputs.today }}
+          title: ${{ steps.getdate.outputs.today }} Merge to develop
           body: |
             ## Waiting for workflow to develop branch merge approval
 
