--- a/.github/workflows/1-request-deploy-staging.yml
+++ b/.github/workflows/1-request-deploy-staging.yml
@@ -48,7 +48,7 @@ jobs:
           #SLACK_MESSAGE: 'Deployed to Production'
           #SLACK_MESSAGE: 'New Release ${{ github.event.release.tag_name }} is published, < ${{ github.event.release.html_url }}|check it out now.>'
 
-          SLACK_MESSAGE: ${{ steps.getdate.outputs.today }} " :" Pull request for deployment to Staging Server has passed all CI tests and now pending merge...
+          SLACK_MESSAGE: ${{ steps.getdate.outputs.today }} Pull request for deployment to Staging Server has passed all CI tests and now pending merge...
           #SLACK_CHANNEL: "z_general"
 
       - name: Create an issue
@@ -56,7 +56,7 @@ jobs:
         uses: actions-ecosystem/action-create-issue@v1
         with:
           github_token: ${{ secrets.github_token }}
-          title: ${{ steps.getdate.outputs.today }} Merge to develop
+          title: ${{ steps.getdate.outputs.today }} Failed tests in pull request to merge to deploy.
           body: |
             ## Waiting for workflow to develop branch merge approval
 
