--- a/.github/workflows/1-request-deploy-staging.yml
+++ b/.github/workflows/1-request-deploy-staging.yml
@@ -52,7 +52,7 @@ jobs:
           #SLACK_CHANNEL: "z_general"
 
       - name: Create an issue
-        if: failure() && github.event_name == 'pull_request'
+        #if: failure() && github.event_name == 'pull_request'
         uses: actions-ecosystem/action-create-issue@v1
         with:
           github_token: ${{ secrets.github_token }}
