--- a/.github/workflows/1-request-deploy-staging.yml
+++ b/.github/workflows/1-request-deploy-staging.yml
@@ -31,9 +31,9 @@ jobs:
 
       - run: npm run format:check
 
-      - run: npm run test -- --coverage
-        env:
-          CI: true
+      #- run: npm run test -- --coverage
+      #  env:
+      #    CI: true
 
       - name: Upload Test Coverage
         uses: actions/upload-artifact@v1
@@ -52,7 +52,7 @@ jobs:
           #SLACK_CHANNEL: "z_general"
 
       - name: Create an issue
-        #if: failure() && github.event_name == 'pull_request'
+        if: failure() && github.event_name == 'pull_request'
         uses: actions-ecosystem/action-create-issue@v1
         with:
           github_token: ${{ secrets.github_token }}
