--- a/.github/workflows/2-deploy-to-staging.yml
+++ b/.github/workflows/2-deploy-to-staging.yml
@@ -6,6 +6,11 @@ on:
 jobs:
   deploy_to_staging:
     name: Deploy To Staging Server
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+      issues: 'write'
+
     #if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
@@ -72,7 +77,7 @@ jobs:
           path: build
 
       - name: Deploy to Staging
-        if: failure()
+        #if: failure()
         #if: github.event_name == 'push' # This branch will always be develop because of header "on" values //////  && github.ref == 'refs/heads/develop'
         run: npx surge --project ./build --domain dashing-scale.surge.sh
         env:
@@ -108,5 +113,5 @@ jobs:
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          #NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
